examples/vote-ephemeral-cluster/api/manifests/manifests.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  labels:
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: ${actions.build.api.outputs.deployment-image-id}
        imagePullPolicy: IfNotPresent
        args:
        - /bin/sh
        - -c
        - ls /app/app.py | entr -n -r python /app/app.py
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        livenessProbe:
          failureThreshold: 30
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 90
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 3
        readinessProbe:
          failureThreshold: 90
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 2
          periodSeconds: 1
          successThreshold: 2
          timeoutSeconds: 3
        resources:
          limits:
            cpu: "1"
            memory: 1Gi
          requests:
            cpu: 10m
            memory: 90Mi
        securityContext:
          allowPrivilegeEscalation: false

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: api
  name: api
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: api

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
  labels:
    app: api
spec:
  ingressClassName: nginx
  rules:
  - host: api.${providers.ephemeral-kubernetes.outputs.default-hostname}
    http:
      paths:
      - backend:
          service:
            name: api
            port:
              number: 80
        path: /
        pathType: Prefix
